[BE] refactor#153: 특정 경로, 좌표 포함 사용자 ID 리스트 조회 성능 개선
:tada: :tada: :tada:
이현수 <znight1020@naver.com>님이 Closes #153을 완료했습니다. 

커밋 목록
* refactor: 분실물, 습득물 JsonIdentityInfo 추가

* feat: Polygon 생성 시간 단축

* refactor: patch -> put 변경, jpa save 메서드 호출 제거

* refactor: LineString -> Polygon 변환, ST_Intersects 를 통한 조회 성능 개선

* feat: 추후 공간 인덱스 설정을 위한 NOT NULL 설정 및 빈 공간 데이터 추가

* feat: 이동 종료 시 사용자 경로 LineCirclePolygon 저장

* test: 가방 변경 이벤트 처리 시 이동이 진행중이지 않은 경우 처리하지 않는 테스트

승인자
Approved-by: 송재원 <fosong98@gmail.com>